# solana_rareskills

./: .gitignore  60 days of Solana - A Solana Course By RareSkills.md  README.md
01 - Introductory Topics/: 01 - Solana Hello World (Installation and Troubleshooting).md  02 - Arithmetic and Basic Types in Solana and Rust.md  03 - Solana Anchor Program IDL.md  04 - Require, Revert, and Custom Errors in Solana.md  05 - Solana programs are upgradeable and do not have constructors.md
02 - The minimum Rust you need to know/: 06 - Basic Rust for Solidity Developers.md  07 - The unusual syntax of Rust.md  08 - Rust function-like procedural Macros.md  09 - Rust Structs and Attribute-like and Custom Derive Macros.md  10 - Visibility and "inheritance" in Rust and Solana.md
03 - Important System-level Information in Solana/: 11 - The Solana clock and other "block" variables.md  12 - Solana Sysvars Explained.md  13 - Solana logs, “events,” and transaction history.md  14 - Tx.origin, msg.sender, and onlyOwner in Solana: identifying the caller.md  15 - Transaction Fees and compute units.md
04 - Accounts and Storage in Solana/: 16 - Initializing Accounts in Solana and Anchor.md  17 - Solana counter tutorial - reading and writing data to accounts.md  18 - Read account data with Solana web3 js and Anchor.md  19 - Creating -mappings- and -nested mapping- in Solana.md  20 - Cost of storage, maximum storage size, and account resizing in Solana.md  21 - Reading an account balance in Anchor- address(account).balance in Solana.md  29 - Owner vs Authority in Solana.md  (+11 more)
playground/compute_unit/programs/compute_unit/: Cargo.toml
playground/compute_unit/programs/compute_unit/src/: lib.rs
playground/day_19_example_map/programs/day_19_example_map/: Cargo.toml
playground/day_19_example_map/programs/day_19_example_map/src/: lib.rs
playground/day_23_sol_splitter/programs/day_23_sol_splitter/: Cargo.toml
playground/day_23_sol_splitter/programs/day_23_sol_splitter/src/: lib.rs
playground/day_29_owner_authority/programs/day_29_owner_authority/: Cargo.toml
playground/day_29_owner_authority/programs/day_29_owner_authority/src/: lib.rs
playground/read_write_storage/programs/read_write_storage/: Cargo.toml
playground/read_write_storage/programs/read_write_storage/src/: lib.rs
playground/sysvar/programs/sysvar/: Cargo.toml
playground/sysvar/programs/sysvar/src/: lib.rs
(+136 files in other folders)
